syntax = "proto3";

package feed;

option go_package = "/feed";

import "idl/douyin/common.proto";
import "idl/google/api/annotations.proto";

message FeedRequest {
  int64 latest_time = 1;
}

message FeedResponse {
  repeated common.Video videos = 1;
  int64 next_time = 2;
}

message VideoListRequest {
  repeated int64 video_ids = 1;
}

message VideoListResponse {
  repeated common.Video videos = 1;
}

message VideoInfoRequest {
  int64 user_id = 1;
  int64 video_id = 2;
  int64 user_id_to_query = 3;
}

message VideoInfoResponse {
  common.Video video = 1;
}

message VideoExistsRequest {
  int64 video_id = 1;
}

message VideoExistsResponse {
  bool exists = 1;
}

service FeedService {
  rpc Feed(FeedRequest) returns (FeedResponse) {
    option (google.api.http) = {
      get: "/api/feed"
    };
  }
  rpc VideoList(VideoListRequest) returns (VideoListResponse);
  rpc VideoInfo(VideoInfoRequest) returns (VideoInfoResponse);
  rpc VideoExists(VideoExistsRequest) returns (VideoExistsResponse);
}