syntax = "proto3";

package feed;

option go_package = "/favorite";

import "idl/common.proto";

message FavoriteCountRequest {
  int64 user_id = 1;
}

message FavoriteCountResponse {
  int64 count = 1;
}

message FavoriteActionRequest {
  int64 user_id = 1;
  int64 video_id = 2;
  int32 action_type = 3;
}

message FavoriteActionResponse{}

message FavoriteListRequest{
  int64 user_id = 1;
}

message FavoriteListResponse {
  repeated common.Video videos = 1;
}

service FavoriteService {
  rpc FavoriteCount(FavoriteCountRequest) returns (FavoriteCountResponse);
  rpc FavoriteAction(FavoriteActionRequest) returns (FavoriteActionResponse);
  rpc FavoriteList(FavoriteListRequest) returns (FavoriteListResponse);
}
